v2 log4cpp 例子更新完毕

--- a/framework/LogEchotest/log4cpp.conf
+++ b/framework/LogEchotest/log4cpp.conf
@@ -1,15 +1,28 @@
-# 定义了3个category sub1, sub2, sub3
-# 其中sub2和sub3设置了additivity属性为false;sub1的additivity属性默认为true
+# 定义了3个category sub1, LogHeartBeat, LogText
+# 其中LogHeartBeat和LogText设置了additivity属性为false;sub1的additivity属性默认为true
+# LogHeartBeat 用于 debug
+# typedef enum {EMERG  = 0, 
+#		      FATAL  = 0,
+#                      ALERT  = 100,
+#                      CRIT   = 200,
+#                      ERROR  = 300, 
+#                      WARN   = 400,
+#                      NOTICE = 500,
+#                      INFO   = 600,
+#                      DEBUG  = 700,
+#                      NOTSET = 800
+#        } PriorityLevel;
+
 rootCategory=DEBUG, rootAppender
 
 category.sub1=,A1
 additivity.sub1=false
 
-category.sub2=INFO, A2
-additivity.sub2=false
+category.LogHeartBeat=INFO, A2
+additivity.LogHeartBeat=false
 
-category.sub3=ERROR, A3
-additivity.sub3=false
+category.LogText=ERROR, A3
+additivity.LogText=false
 
 
 # 定义rootAppender类型和layout属性，这里使用了BasicLayout
@@ -24,7 +37,7 @@ appender.A1.layout=org.apache.log4cpp.SimpleLayout
 #定义A2的属性，这里使用了PatternLayout
 appender.A2=org.apache.log4cpp.ConsoleAppender
 appender.A2.layout=org.apache.log4cpp.PatternLayout
-appender.A2.layout.ConversionPattern=The message '%m' at time %d{%Y-%m-%d %H:%M:%S}%n
+appender.A2.layout.ConversionPattern=%d{%Y-%m-%d %H:%M:%S} [%p]: [%c] %m%n
 
 #定义A3的属性
 appender.A3=org.apache.log4cpp.RollingFileAppender
